--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,9 @@ nav {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translateX(-50%) translateY(-50%);
+  -webkit-transform: translateX(-50%) translateY(-50%);
+      -ms-transform: translateX(-50%) translateY(-50%);
+          transform: translateX(-50%) translateY(-50%);
 }
 
 li {
@@ -34,11 +36,15 @@ li a {
   width: 0;
   height: 3px;
   background-color: #B43273;
+  -webkit-transition: width 0.5s;
+  -o-transition: width 0.5s;
   transition: width 0.5s;
 }
 
 .link:hover::after {
   width: 100%;
+  -webkit-transition: width 0.5s;
+  -o-transition: width 0.5s;
   transition: width 0.5s;
 }
 
