--- a/css/style.css
+++ b/css/style.css
@@ -1,50 +1,56 @@
-body {
-  margin: 0;
-  padding: 0;
-  background-color: #0b0b0b;
-  font-family: 'Open Sans', sans-serif;
+body
+{
+    font-family: 'Open Sans', sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #0b0b0b;
 }
-.becreative {
-  border-top: 3px solid #B43273;
-  border-bottom: 3px solid #B43273; 
-}
-
-nav {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translateX(-50%) translateY(-50%);
-      -ms-transform: translateX(-50%) translateY(-50%);
-          transform: translateX(-50%) translateY(-50%);
+.becreative
+{
+    border-top: 3px solid #b43273;
+    border-bottom: 3px solid #b43273;
 }
 
-li {
-  display: inline-block;
+nav
+{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translateX(-50%) translateY(-50%);
+        -ms-transform: translateX(-50%) translateY(-50%);
+            transform: translateX(-50%) translateY(-50%);
 }
 
-li a {
-  text-decoration: none;
-  color: rgb(255, 255, 255);
-  font-weight: lighter;
-  font-size: 25px;
-  padding: 0 5px;
+li
+{
+    display: inline-block;
 }
 
-.link::after {
-  content: '';
-  display: block;
-  width: 0;
-  height: 3px;
-  background-color: #B43273;
-  -webkit-transition: width 0.5s;
-  -o-transition: width 0.5s;
-  transition: width 0.5s;
+li a
+{
+    font-size: 25px;
+    font-weight: lighter;
+    padding: 0 5px;
+    text-decoration: none;
+    color: rgb(255, 255, 255);
 }
 
-.link:hover::after {
-  width: 100%;
-  -webkit-transition: width 0.5s;
-  -o-transition: width 0.5s;
-  transition: width 0.5s;
+.link::after
+{
+    display: block;
+    width: 0;
+    height: 3px;
+    content: '';
+    -webkit-transition: width .5s;
+         -o-transition: width .5s;
+            transition: width .5s;
+    background-color: #b43273;
 }
 
+.link:hover::after
+{
+    width: 100%;
+    -webkit-transition: width .5s;
+         -o-transition: width .5s;
+            transition: width .5s;
+}
